# Rainbow_IQN_Crafter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: main.yaml
configs/agent/: rainbow_iqn.yaml
configs/env/: crafter.yaml
configs/logger/: wandb.yaml
scripts/: demo_gradio.py  evaluate.py  record_demo.py  train.py  tune_optuna.py
src/agents/: base_agent.py  rainbow_iqn_agent.py
src/components/: replay_buffer.py  rnd.py  sum_tree.py
src/envs/: wrappers.py
src/networks/: encoders.py  heads.py  noisy_linear.py
src/utils/: diagnostics.py  inference.py  logging.py  losses.py
tests/: test_bellman_update.py  test_buffer_persistence.py  test_iqn_distribution.py  test_per_sampling.py  test_sum_tree.py
